@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.55
+Release: 0.56
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -464,6 +464,10 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Sun Jan 12 16:17:17 EST 2003
+- file: *really* read elf64 notes correctly.
+- python: restore thread context on errorCB (#80744).
+
 * Fri Jan 10 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.55
 - fix: obscure corner case(s) with rpmvercmp (#50977).
 
